<resources>
    <string name="app_name">Popular Movies</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Settings</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="searchHint">Search</string>

    <string name="number_results">Results: %1$d</string>
    <string name="number_pages">%1$d / %2$d</string>
    <string name="unknown">Unknown</string>

    <!-- [CHAR LIMIT=NONE] -->
    <string name="close_button">Close</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="refresh_button">Refresh</string>

    <!-- [CHAR LIMIT=NONE] -->
    <string name="no_internet">Check your connection or try again.</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="no_internet_title">No Internet Connection!</string>
    <!-- [CHAR LIMIT=NONE] -->
    <string name="no_found_message"><b>No Movie or TV show found</b>\nPlease try again with a different research.</string>
    <string name="detail_no_found_message">The resource you requested could not be found.</string>

    <!--Strings for DetailsActivity-->
    <string name="original_title"><![CDATA[<b>Original Title:</b>]]> %1$s</string>
    <string name="description"><![CDATA[<b>Description:</b><br/>]]> %1$s</string>

    <string name="genres"><![CDATA[<b>Genre:</b>]]> %1$s</string>
    <string name="production_companies"><![CDATA[<b>Production Companies:</b>]]> %1$s</string>
    <string name="production_countries"><![CDATA[<b>Production Countries:</b>]]> %1$s</string>
    <string name="runtime"><![CDATA[<b>Duration:</b>]]> %1$d min</string>
    <string name="spoken_languages"><![CDATA[<b>Languages:</b>]]> %1$s</string>
    <string name="status"><![CDATA[<b>Status:</b>]]> %1$s</string>
    <string name="seasons_and_episodes"><![CDATA[<b>Seasons:</b>]]> %1$d | <![CDATA[<b>Episodes:</b>]]> %2$d</string>


    <!-- Strings For Search Type spinner [CHAR LIMIT=10] -->
    <string name="search_movies">Movies</string>
    <string name="search_movies_value" translatable="false">movie</string>
    <!-- Strings For Search Type spinner [CHAR LIMIT=10] -->
    <string name="search_tv">TV Shows</string>
    <string name="search_tv_value" translatable="false">tv</string>


    <!--Category settings [CHAR LIMIT=NONE]-->
    <string name="category_general">General</string>
    <string name="category_filter">Search Filters</string>

    <!-- Strings For Order By Preference [CHAR LIMIT=NONE] -->
    <string name="settings_orderBy_label">Order By</string>
    <string name="settings_orderBy_key" translatable="false">sort_by</string>
    <string name="settings_orderBy_default" translatable="false">popularity.desc</string>
    <!-- Strings For More Popular option [CHAR LIMIT=10] -->
    <string name="orderBy_more_popular_label">More Popular</string>
    <string name="orderBy_more_popular_value" translatable="false">popularity.desc</string>
    <!-- Strings For Top Rated option [CHAR LIMIT=10] -->
    <string name="orderBy_top_rated_label">Top Rated</string>
    <string name="orderBy_top_rated_value" translatable="false">vote_average.desc</string>
    <!-- Strings For less Popular option [CHAR LIMIT=10] -->
    <string name="orderBy_less_popular_label">Less Popular</string>
    <string name="orderBy_less_popular_value" translatable="false">popularity.asc</string>
    <!-- Strings For low rated option [CHAR LIMIT=10] -->
    <string name="orderBy_low_rated_label">Low Rated</string>
    <string name="orderBy_low_rated_value" translatable="false">vote_average.asc</string>
    <!-- Strings For release date option [CHAR LIMIT=10] -->
    <string name="orderBy_newest_label">Newest</string>
    <string name="orderBy_newest_value" translatable="false">release_date.desc</string>
    <string name="orderBy_oldest_label">Oldest</string>
    <string name="orderBy_oldest_value" translatable="false">release_date.asc</string>


    <!-- Strings For Genre Ids Preference [CHAR LIMIT=NONE] -->
    <string name="settings_genre_ids_label">Genre</string>
    <string name="settings_genre_ids_key" translatable="false">with_genres</string>
    <string name="settings_genre_ids_default" translatable="false"></string>
    <!-- String for Genre Ids option [CHAR LIMIT=NONE] -->
    <string name="settings_all_genres_label">All</string>
    <string name="settings_all_genres_value" translatable="false"></string>
    <string name="settings_Action_label">Action</string>
    <string name="settings_Action_value" translatable="false">28</string>
    <string name="settings_Adventure_label">Adventure</string>
    <string name="settings_Adventure_value" translatable="false">12</string>
    <string name="settings_Animation_label">Animation</string>
    <string name="settings_Animation_value" translatable="false">16</string>
    <string name="settings_Comedy_label">Comedy</string>
    <string name="settings_Comedy_value" translatable="false">35</string>
    <string name="settings_Crime_label">Crime</string>
    <string name="settings_Crime_value" translatable="false">80</string>
    <string name="settings_Documentary_label">Animation</string>
    <string name="settings_Documentary_value" translatable="false">99</string>
    <string name="settings_Drama_label">Drama</string>
    <string name="settings_Drama_value" translatable="false">18</string>
    <string name="settings_Family_label">Family</string>
    <string name="settings_Family_value" translatable="false">10751</string>
    <string name="settings_Fantasy_label">Fantasy</string>
    <string name="settings_Fantasy_value" translatable="false">14</string>
    <string name="settings_History_label">History</string>
    <string name="settings_History_value" translatable="false">36</string>
    <string name="settings_Horror_label">Horror</string>
    <string name="settings_Horror_value" translatable="false">27</string>
    <string name="settings_Music_label">Music</string>
    <string name="settings_Music_value" translatable="false">10402</string>
    <string name="settings_Mystery_label">Family</string>
    <string name="settings_Mystery_value" translatable="false">9648</string>
    <string name="settings_Romance_label">Romance</string>
    <string name="settings_Romance_value" translatable="false">10749</string>
    <string name="settings_Science_Fiction_label">Science Fiction</string>
    <string name="settings_Science_Fiction_value" translatable="false">878</string>
    <string name="settings_TV_Movie_label">TV Movie</string>
    <string name="settings_TV_Movie_value" translatable="false">10770</string>
    <string name="settings_Thriller_label">Thriller</string>
    <string name="settings_Thriller_value" translatable="false">53</string>
    <string name="settings_War_label">War</string>
    <string name="settings_War_value" translatable="false">10752</string>
    <string name="settings_Western_label">Western</string>
    <string name="settings_Western_value" translatable="false">37</string>

    <!--Switch buttons  [CHAR LIMIT=NONE]-->
    <string name="settings_adult_content_label">Include Adult Content</string>
    <string name="settings_adult_content_key" translatable="false">include_adult</string>
    <string name="settings_include_video_label">Include Video</string>
    <string name="settings_include_video_key" translatable="false">include_video</string>
    <string name="checkbox_summary_on">On</string>
    <string name="checkbox_summary_off">Off</string>


</resources>
